--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             -khtml-user-select: none;
             -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
         }
+		html {
+			background-color:white;
+		}
     </style>
 </head>
 <body style="padding:0; margin: 0; background: #000;">
